--- a/modules/mariadb/files/my.cnf
+++ b/modules/mariadb/files/my.cnf
@@ -44,7 +44,7 @@ skip-external-locking
 #
 # Instead of skip-networking the default is now to listen only on
 # localhost which is more compatible and is not less secure.
-bind-address            = 127.0.0.1
+# bind-address            = 127.0.0.1
 #
 # * Fine Tuning
 #
@@ -151,7 +151,6 @@ innodb_flush_method     = O_DIRECT
 # ssl-cert=/etc/mysql/server-cert.pem
 # ssl-key=/etc/mysql/server-key.pem
 binlog_format=MIXED
-
 
 [mysqldump]
 quick
